--- a/fit_journal/pyproject.toml
+++ b/fit_journal/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "rabbitmq (>=0.2.0,<0.3.0)",
     "django-celery-beat (>=2.8.1,<3.0.0)",
     "django-redis (>=6.0.0,<7.0.0)",
+    "transliterate (==1.10.2)",
 ]
 
 
